Fix toggle button wrapper getting shrinked in overflowing containers

--- a/projects/mdl-angular/scss/material/components/button.scss
+++ b/projects/mdl-angular/scss/material/components/button.scss
@@ -148,6 +148,7 @@
 .mat-button-toggle-group {
   --mat-standard-button-toggle-shape: 12px !important;
   margin: -1px;
+  min-width: fit-content;
 
   /* SNCF "options" style */
   &.options {
